--- a/src/components/navigation/Navigation.scss
+++ b/src/components/navigation/Navigation.scss
@@ -5,7 +5,7 @@
   top: 0;
   right: 0;
   z-index: 999;
-  height: 135px0;
+  height: 135px;
   background: transparent;
   transition: height 0.2s linear, background 0.2s;
 
