--- a/src/modules/landing/Landing.scss
+++ b/src/modules/landing/Landing.scss
@@ -24,11 +24,12 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    margin: 0 5vw;
+    margin: 0 5vw 15px;
+    line-height:1
   }
 
   h3, h4 {
-    max-width: 50vw;
+    max-width: 45vw;
     margin: 0 auto;
   }
 
