--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -1,37 +1,1 @@
-.SidebarContainer {
-  grid-area: sidebar;
-  position: relative;
-  width: 0;
-  height: 100vh;
-
-  @media only screen and (max-width: 900px) {
-    display: none;
-  }
-
-  .Sidebar {
-    position: absolute;
-    right: 0;
-    background-image: linear-gradient(to bottom, #ab0333 3%, transparent 97%);
-    width: 120px;
-    height: 100vh;
-    z-index: 1000;
-  }
-
-  a {
-    transition: opacity 0.1s;
-
-    &:hover {
-      opacity: 0.55;
-    }
-
-    &:not(:last-child) {
-      margin-bottom: 38px;
-    }
-  }
-
-  img {
-    width: 42px;
-    height: 42px;
-  }
-}
-
+.SidebarContainer .Sidebar { display:none}
