--- a/src/modules/landing/Landing.scss
+++ b/src/modules/landing/Landing.scss
@@ -126,7 +126,7 @@
     display: flex;
     overflow: hidden;
 
-    background: #0c0a27;
+    background: #08331F;
     margin-top: 5vw;
 
     @media only screen and (max-width: 900px) {
@@ -141,7 +141,7 @@
       position: relative;
       flex: 0 0 auto;
       width: 30vw;
-      background: #8b0430;
+      background: #1D764D;
 
       img {
         position: absolute;
