--- a/src/modules/landing/Landing.scss
+++ b/src/modules/landing/Landing.scss
@@ -141,7 +141,7 @@
       position: relative;
       flex: 0 0 auto;
       width: 30vw;
-      background: #1D764D;
+      background: #4f9172;
 
       img {
         position: absolute;
