--- a/src/modules/landing/Landing.scss
+++ b/src/modules/landing/Landing.scss
@@ -84,7 +84,7 @@
       display: flex;
       flex-flow: column;
       border-radius: 3px;
-      border: solid 2px #8b0430;
+      border: solid 2px #044c8b;
       align-items: center;
       padding: 6vmin 8vmin;
       margin-right: -1.5px;
