--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -99,7 +99,7 @@ button {
   }
 
   &:hover {
-    background-color: #cc1e46;
+    background-color: #3880bf;
   }
 
   &:disabled {
@@ -273,7 +273,7 @@ textarea, input, select {
 }
 
 .Highlight {
-  color: #cc1e46;
+  color: #1684e3;
 }
 
 .FullWidth { width: 100%; }
